--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
 .App {
-  text-align: center;
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 20% 1fr 20%;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  margin-left: 50%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -26,6 +33,7 @@
 
 .App-link {
   color: #61dafb;
+  flex-direction: row;
 }
 
 @keyframes App-logo-spin {
