terminei a parte de renderização dos cards falta fazer seleect

--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,9 @@
     transform: rotate(360deg);
   }
 }
+
+.card{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
